tests + swagger
